# RLSRP_2025

./: .gitignore  0_data_download_TO_BE_DELETED copy.ipynb  0_data_download_TO_BE_DELETED.ipynb  README.md  ccle.json  environment.yml  pyproject.toml  testing.py  tmp.ipynb  tmp.py
RLSRP_2025/: __init__.py  seq_utils.py  visualization_utils.py
RLSRWP_2025/: constants.py  logger_utils.py  seq_utils.py  visualization_utils.py
config/: vk_fastqpp_config.json  vk_fastqpp_run_info.txt
notebooks/: 0_data_download_TO_BE_DELETED.ipynb  2_2_gatk_workflow.ipynb  2_3_strelka2_workflow.ipynb  2_variant_simulation.ipynb  3_variant_matrix_processing.ipynb  4_3_mutation_analysis_protein_mutation.ipynb  4_4_mutation_analysis_sequence_visualization.ipynb  4_5_cancer_typing_with_cell_lines.ipynb  5_1_gene_analysis_heatmaps.ipynb  5_2_gene_analysis_drugs.ipynb  6_1_pathway_analysis_enrichr.ipynb  7_3_dlist_source_tests.ipynb  FIRST_ANALYIS.ipynb  FN_probabilities.ipynb  Fig1_Supp3_ccle.ipynb  Fig1_gene_gget_cbio.ipynb  Fig1_gene_gget_opentargets.ipynb  Fig1_lollipop_plots.ipynb  Fig1_pathway_gget_enrichr.ipynb  Fig1_single_cell_analysis.ipynb  Fig1_single_cell_analysis_cbio_genes_only.ipynb  Fig1_variant_cosmic_lookup.ipynb  Fig1_variant_gget_elm.ipynb  Fig1_variant_heatmaps.ipynb  Fig1_variant_lollipop_plots.ipynb  Fig1_variant_maftools_plots.ipynb  Fig1_variant_oncokbannotator.ipynb  Fig2.ipynb  Fig2_Supp7_Supp8_geuvadis.ipynb  Fig2_aggregate.ipynb  Fig2_variant_simulation.ipynb  Fig3_Supp_geuvadis.ipynb  Fig3_ccle.ipynb  Fig3_geuvadis.ipynb  SuppX_dlist_source_tests.ipynb  (+17 more)
(+44 files in other folders)
